# kokkos_attribute_fail

./: CMakeLists.txt  Readme.md  attribute_fail.cpp  lib.cpp  lib.h  lib2.cpp
